--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,3 +1,6 @@
+require:
+  - rubocop-minitest
+
 AllCops:
   TargetRubyVersion: 2.6
 
@@ -11,9 +14,6 @@ Style/StringLiteralsInInterpolation:
 
 Layout/LineLength:
   Max: 120
-
-Naming/MethodParameterName:
-  AllowedNames: -as
 
 Style/Documentation:
   Enabled: false
